# agricultural-robot

./: .gitignore  .gitmodules  LICENSE  compile-java-protos
agricultural-java/: .classpath  agricultural-java.ipr  agricultural-java.iws  build.gradle
agricultural-java/src/main/java/frc/team5472/robot/: Callbacks.java  Communication.java  Consts.java  Control.java  Robot.java
agricultural-java/src/main/java/frc/team5472/robot/modules/: Auger.java  Differential.java  Grabber.java  Grip.java  IMU.java  Joy.java  XYTable.java
agricultural-java/src/org/usfirst/frc/team5472/robot/: Callbacks.java  Communication.java  Control.java  Differential.java  IMU.java  Joy.java  Robot.java  XYTable.java
agricultural-java/src/org/usfirst/frc/team5472/robot/modules/: Differential.java  IMU.java  Joy.java  XYTable.java
agricultural-java/src/org/usfirst/frc/team5472/robot/proto/: RobotMsgs.java
src/camera_publisher/: CMakeLists.txt  package.xml
src/camera_publisher/launch/: start_camera.launch
src/joystick_control/: CMakeLists.txt  package.xml
src/joystick_control/launch/: teleop.launch
src/joystick_control/src/: teleoperated.cpp
src/roborio/: CMakeLists.txt  package.xml
src/roborio/config/: rosconsole.config
src/roborio/include/roborio/: receivers.h  senders.h
src/roborio/launch/: rio.launch  topics.yaml
src/roborio/src/: receivers.cpp  rio.cpp  senders.cpp
src/roborio_msgs/: CMakeLists.txt  package.xml
src/roborio_msgs/include/roborio_msgs/: robot_msgs.pb.h
src/roborio_msgs/include/roborio_msgs/proto/: robot_msgs.pb.h
src/roborio_msgs/msg/: EncoderPair.msg
src/roborio_msgs/proto/: robot_msgs.proto
src/roborio_msgs/src/: robot_msgs.pb.cc
src/roborio_msgs/src/proto/: robot_msgs.pb.cc
