<?xml version="1.0"?>
<package format="2">
    <name>camera_publisher</name>
    <version>0.0.1</version>
    <description>Contains launchfiles for starting camera publishing nodes.</description>

    <maintainer email="aramis.tanelus@gmail.com">Aramis Tanelus</maintainer>
    <author email="aramis.tanelus@gmail.com">Aramis Tanelus</author>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>usb_cam</depend>
</package>
