<?xml version="1.0"?>
<package format="2">
    <name>joystick_control</name>
    <version>0.0.1</version>
    <description>A package for testing roborio communications through teleoperated control</description>

    <maintainer email="aramis.tanelus@gmail.com">Aramis Tanelus</maintainer>
    <author email="aramis.tanelus@gmail.com">Aramis Tanelus</author>

    <url type="repository">https://github.com/Aramist/agricultural-robot</url>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roborio_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_export_depend>roborio_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <exec_depend>roborio_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
</package>
