<?xml version="1.0"?>
<package format="2">
    <name>roborio</name>
    <version>0.0.1</version>
    <description>The roborio package</description>

    <maintainer email="robotics@todo.todo">robotics</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>roborio_msgs</depend>
    <depend>sensor_msgs</depend>
</package>
