<?xml version="1.0"?>
<package format="2">
    <name>roborio_msgs</name>
    <version>0.0.0</version>
    <description>The roborio_msgs package</description>

    <maintainer email="aramist@todo.todo">aramist</maintainer>


    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>std_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
</package>
